--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,10 @@ body {
 }
 
 h1,
+h2,
 p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
 }
 
 h1 {
@@ -14,7 +16,17 @@ h1 {
     color: white;
 }
 
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
 .download-link {
     color: aquamarine;
     font-size: 16px;
+}
+
+.product-description p {
+    color: gray;
+    font-size: 21px;
 }
